change composer json name

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "https://github.com/edocag/laravel-mongodb",
     "authors": [
         {
-            "name": "Jens Segers",
+            "name": "EDOC AG",
             "homepage": "https://edocag.com"
         }
     ],
